# rpi-rgb-led-matrix

./: .editorconfig  .gitignore  .ocamlformat  3star.ppm  CMakeLists.txt  HUB75.md  Makefile  README.md  build-rpi-rgb-led-matrix.py  build.sh  car.ppm  clock1.ppm  clock2.ppm  config.mk  cool-example.cc  demo-main.cc  dune-project  gpio.cc  gpio.h  hatch.toml  led-image-viewer  led-image-viewer.cc  led-matrix  led-matrix.cc  led-matrix.h  main.cc  meson.build  minimal-example  minimal-example.cc  pixel-mapping.cc  poke1.ppm  poke1_alt.ppm  poke2.ppm  poke2_alt.ppm  poke3.ppm  poke3_alt.ppm  poke4.ppm  poke4_alt.ppm  poke5.ppm  poke5_alt.ppm  (+21 more)
.github/: ISSUE_TEMPLATE.md
Bubbles/: Bubbles_frame_0001.ppm  Bubbles_frame_0002.ppm  Bubbles_frame_0003.ppm  Bubbles_frame_0004.ppm  Bubbles_frame_0005.ppm  Bubbles_frame_0006.ppm  Bubbles_frame_0007.ppm  Bubbles_frame_0008.ppm  Bubbles_frame_0010.ppm  Bubbles_frame_0011.ppm  Bubbles_frame_0012.ppm  Bubbles_frame_0013.ppm  Bubbles_frame_0014.ppm  Bubbles_frame_0015.ppm  Bubbles_frame_0016.ppm  Bubbles_frame_0017.ppm  Bubbles_frame_0018.ppm  Bubbles_frame_0019.ppm  Bubbles_frame_0020.ppm  Bubbles_frame_0022.ppm  Bubbles_frame_0023.ppm  Bubbles_frame_0024.ppm  Bubbles_frame_0025.ppm  Bubbles_frame_0026.ppm  (+243 more)
adapter/: README.md  (+3 more)
bindings/ocaml/: .gitignore  dune  dune-project  rgb_matrix.ml  rgb_matrix.mli
bindings/ocaml/src/: dune  function_description.ml  rgb_matrix.ml  rgb_matrix.mli  rgb_matrix_types.ml  rgbmatrix_stubs.c  type_description.ml
bindings/ocaml/test/: dune  test_rgb_matrix.ml
bindings/python/: .gitignore  CMakeLists.txt  Makefile  README.md  base.py  clock.py  countdown-n-lap.py  dvd.py  earth.py  imageviewer.py  main.py  meson.build  setup.py  slack.py  stocks.py  weather.py  welcome.py
bindings/python/main/: clock.py  common.py  gif-viewer.py  graphics.py  image-scroller.py  image-viewer-v2.py  locations.py  main.py  phrases.py  plain-text.py  pull.sh  pulsing-brightness.py  pulsing-colors.py  push.sh  rotating-block-generator.py  runtext.py  simple-square-v2.py  simple-square.py  weather.py  word.py
bindings/python/main/core/: main-old.py
bindings/python/projects/: .env.example  BRIGHTNESS-CONTROL.md  brightness-test.py
bindings/python/projects/music-display/: config.py  display.py  spotify_client.py
bindings/python/projects/pomodoro-timer/: pomodoro-timer-test.py  pomodoro-timer.py
bindings/python/projects/retro-clock/: README.md  retro-clock.py
bindings/python/projects/shared/: __init__.py  color_palette.py  config_manager.py  font_manager.py  image_utils.py  matrix_base.py  timezone_manager.py
bindings/python/projects/simple-clock/: simple-clock.py
bindings/python/projects/stock-tracker/: ADVANCED-STOCK-TRACKER-README.md  README_stock_tracker.md  STOCK-TRACKER-README.md  advanced-stock-tracker.py  stock-requirements.txt  stock-tracker.env  stock-tracker.py  stock_client.py  stock_config.py  stock_tracker.py
bindings/python/projects/tattoo-display/: real-tattoo-display.py
bindings/python/projects/video-player/: video-player-demo.py  video-player.env  video-player.py
bindings/python/projects/weather-display/: WEATHER_ICONS_SETUP.md  weather-display.py
bindings/python/rgbmatrix/: .gitignore  CMakeLists.txt  Makefile  __init__.py  core.cpp  core.pxd  core.pyx  cppinc.pxd  graphics.cpp  graphics.pxd  graphics.pyx  meson.build
bindings/python/rgbmatrix/shims/: pillow.c  pillow.h
bindings/python/samples/: .env.example  .gitignore  POMODORO-TIMER-README.md  README_music_display.md  VIDEO-PLAYER-README.md  advanced-stock-tracker.py  chain  chart_renderer.py  clock.py  config.py  display.py  extract_icons.py  gif-viewer.py  graphics.py  grayscale-block.py  harry.py  image-draw.py  image-scroller.py  image-viewer-v2.py  image-viewer.py  map_weather_icons.py  music_display.py  plain-text.py  pomodoro-timer-test.py  pomodoro-timer.py  pulsing-brightness.py  pulsing-colors.py  race-clock.py  real-tattoo-display.py  rotating-block-generator.py  runtext.py  samplebase.py  simple-clock.py  simple-square-v2.py  simple-square.py  spotify_auth.py  still-viewer.py  stock-tracker.env  stock-tracker.py  stock_config.py  (+7 more)
bindings/python/samples/assets/: .gitignore
examples-api-use/: #cclock.ini#  .gitignore  Makefile  README.md  accuweather-main.cc  accuweather.cc  accuweather.h  c  c-example  c-example.c  cclock  cclock-6.cc  cclock.cc  cclock.ini  clock  clock.cc  currentconditions-details.json  currentconditions.json  d  d2  demo-main.cc  foo.ini  forecast-details.json  forecast.json  hi.c  image-example.cc  input-example  input-example.cc  json.cc  ledcat.cc  ledinit  ledinit.c  meson.build  minimal-example.cc  oldcclock.cc  pixel-demo.cc  pixel-example.cc  pixel-mover.cc  pm5544.pnm  resetmatrix.py  (+7 more)
lib/: .gitignore  CMakeLists.txt  Makefile  README.md  bdf-font.cc  content-streamer-c.cc  content-streamer-c.h  content-streamer.cc  deprecated-transformer.cc  emulator.cc  framebuffer-internal.h  framebuffer.cc  gpio-bits.h  gpio.cc  gpio.h  graphics.cc  hardware-mapping.c  hardware-mapping.h  led-matrix-c.cc  led-matrix.cc  mailbox.c  mailbox.h  matrix-factory.cc  matrix-factory.h  meson.build  multiplex-mappers-internal.h  multiplex-mappers.cc  multiplex-transformers-internal.h  multiplex-transformers.cc  options-initialize.cc  pixel-mapper.cc  thread.cc  timing-internal.h  transformer.cc  utf8-internal.h
lib/hardware/: README
lib/hardware/adafruit-hat/: led-panel-pin-mapping.h  pin-mapping.h  pin-mapping.h~
lib/hardware/classic/: pin-mapping.h  pin-mapping.h~
lib/hardware/regular/: led-panel-pin-mapping.h  pin-mapping.h~
lib/rp1/: rp1_pio_backend.cc  rp1_pio_backend.h  rp1_pio_support.c  rp1_rio_backend.cc  rp1_rio_backend.h
lib/rp1/rp1_pio_vendor/include/piomatter/: protomatter.pio.h
lib/rp1/rp1_pio_vendor/piolib/: pio_rp1.c  piolib.c
lib/rp1/rp1_pio_vendor/piolib/include/: pio_platform.h  piolib.h  piolib_priv.h  rp1_pio_if.h
lib/rp1/rp1_pio_vendor/piolib/include/hardware/: clocks.h  gpio.h  pio.h  pio_instructions.h
lib/rp1/rp1_pio_vendor/piolib/include/hardware/regs/: proc_pio.h
(+1928 files in other folders)
