[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "rgbmatrix"
version = "0.0.1+20250323"
description = "Packaged version of Christoph Friedrich's rpi-rgb-led-matrix library."
authors = [{name="Christoph Friedrich", email="christoph.friedrich@vonaffenfels.de"}]
license = "GPL-2.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
