(rule
 (deps
  (source_tree ../../../lib)
  ../../../Makefile
  (source_tree ../../../include))
 (targets librgbmatrix.a dllrgbmatrix.so)
 (action
  (no-infer
   (progn
    (chdir
     ../../../lib
;     (run make CC=zig-cross-target-cc CXX=zig-cross-target-c++ AR=zig-cross-target-ar RANLIB=zig-cross-target-ranlib librgbmatrix.a librgbmatrix.so.1))
     (run make librgbmatrix.a librgbmatrix.so.1))
    (copy ../../../lib/librgbmatrix.a librgbmatrix.a)
    (copy ../../../lib/librgbmatrix.so.1 dllrgbmatrix.so)))))

(copy_files ../../../include/led-matrix-c.h)

(library
 (name rgb_matrix)
 (public_name rgb_matrix)
 (flags (:standard -w -9-27))
 (foreign_archives rgbmatrix)
 (c_library_flags -lstdc++)
 (foreign_stubs (language c) (names rgbmatrix_stubs))
)
